data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_709.wast
;; 10. **Test for Aggregate Instruction Sequences with alternating `nop`**:    - **Description**: Sequence an aggregate of different instructions interspersed with `nop` and validate the stack types after the entire sequence.    - **Constraint Checked**: Verifies overall stack and type consistency across a sequence of varying instructions.    - **Relation**: Ensures that inserting `nop` strategically within complex instruction sequences does not accidentally change operand types or control flows.

(assert_invalid
  (module
    (func $aggregate-sequence
      (local i32)
      (i32.const 1)
      nop
      (i32.const 2)
      (i32.add)
      nop
      (local.set 0)
      nop
      (local.get 0)
      (i32.const 3)
      (i32.add)
      (drop)
      nop
    )
  )
  "type mismatch"
)